# qwen-in-tilelang

./: .gitignore  README.md  attention.py  basics.py  generate.py  main.py  out  out2  pyproject.toml  qwen.py
course/: 00-orientation.md  01-silu.md  02-rms-norm.md  03-linear.md  04-rope.md  05-attention.md  06-grouped-attention.md  07-run-your-qwen.md  08-profiling.md  09-tuning.md  10-fusion.md  README.md  kernel_lesson_template.md  setup.md
kernels/: __init__.py  grouped_attention.py  linear.py  rms_norm.py  rope.py  silu.py
ref_kernels/: __init__.py  grouped_attention.py  linear.py  rms_norm.py  rope.py  silu.py
src/: attention.py  basics.py  utils.py
src/qwen_inference/: attention.py  attention_ref.py  basics.py  embedding.py  generate.py  kernel_backend.py  model.py  profiler.py  quantize.py  qwen.py  rope.py  sampler.py  tokenizer.py  utils.py
src/qwen_inference/auto_tune/: __init__.py  qwen.py  tuner.py
src/qwen_inference/kernels/: README.md  __init__.py  attention.py  grouped_attention.py  linear.py  rms_norm.py  rope.py  silu.py  softmax.py
src/qwen_inference/kv_cache/: kv_cache.py
tests/: common_test_utils.py  test_attention.py  test_auto_tune.py  test_basics.py  test_course_kernels.py  test_embedding.py  test_generate.py  test_kernel_backend.py  test_kv_cache.py  test_profiler.py  test_qwen_modules.py  test_rope.py
