[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-inference"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["qwen_inference*", "kernels*", "ref_kernels*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
